# hearth

./: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yaml
.cargo/: config.toml
backend/: Cargo.toml
backend/domain/: Cargo.toml
backend/domain/src/: error_codes.rs  lib.rs  test_utils.rs
backend/domain/src/dtos/: auth.rs  mod.rs  signup.rs  user.rs
backend/domain/src/entities/: mod.rs  posts.rs  user.rs
backend/domain/src/features/: create_user.rs  feature.rs  mod.rs
backend/domain/src/features/signup/: mod.rs  signup_with_email.rs
backend/domain/src/features/signup/with_email_password/: mod.rs  s01_send_email_verification_code.rs  s02_validate_email_verification_code.rs  s03_create_user.rs
backend/domain/src/repositories/: credentials_repository.rs  email_sender_repository.rs  email_verifications_repository.rs  mod.rs  tmp_users_repository.rs  users_repository.rs
backend/email_verification_code/: Cargo.toml
backend/server/: Cargo.toml
backend/server/src/: bootstrap.rs  connector.rs  lib.rs  main.rs  routes.rs  server.rs
backend/server/src/database/: email_sender_repository.rs  email_verifications_repository_redis.rs  mod.rs  postgres_connector.rs  tmp_users_repository_redis.rs  users_repository_postgres.rs
backend/server/src/database/entities/: credentials.rs  email_password_credentials.rs  email_verified.rs  mod.rs  prelude.rs  users.rs
backend/server/tests/: utils.rs
backend/server/tests/routes/: mod.rs  signup_with_email.rs
client/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
(+17 files in other folders)
