[package]
name = "server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
actix-web = "4.12.1"
domain = { path = "../domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
macros = { path = "../macros" }
errors = { path = "../errors" }
async-trait = "0.1.89"
dotenvy = "0.15"
redis = { version = "1.0", features = ["tokio-rustls-comp"] }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
rustls = { version = "0.23" }
uuid = { version = "1", features = ["serde", "v4"] }
email_verification_code = { path = "../email_verification_code" }